--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Grader</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="device_offline">Make sure your device is connected to the internet</string>
     <string name="no_results">No results to display</string>
     <string name="error_429">Too many requests</string>
@@ -10,4 +9,7 @@
     <string name="due_at">Due At</string>
     <string name="lock_after_due_date">Lock after due date</string>
     <string name="students_profile_image">Students profile image</string>
+    <string name="create_assignment">Create Assignment</string>
+    <string name="due">due </string>
+    <string name="turned_in">turned in </string>
 </resources>
